fix wrap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,39 +5,6 @@
   }
 }
 
-.card-columns-custom {
-  -webkit-column-count: 1;
-          column-count: 1;
-  -webkit-column-gap: 1.25rem;
-          column-gap: 1.25rem;
-  orphans: 1;
-  widows: 1;
-}
-@media (min-width: 600px) {
-  .card-columns-custom {
-    -webkit-column-count: 2;
-            column-count: 2;
-    -webkit-column-gap: 1.25rem;
-            column-gap: 1.25rem;
-    orphans: 1;
-    widows: 1; }
-}
-@media (min-width: 1000px) {
-  .card-columns-custom {
-    -webkit-column-count: 3;
-            column-count: 3;
-    -webkit-column-gap: 1.25rem;
-            column-gap: 1.25rem;
-    orphans: 1;
-    widows: 1; }
-}
-
-@media (max-width: 1000px) {
-  .dissapear-narrow{
-    display: none !important;
-   }
-}
-
 .post-image{
   display:block; 
   margin-left:auto;
@@ -46,16 +13,42 @@
   object-fit: contain;
 }
 
+.card-columns-custom {
+  -webkit-column-count: 1;
+          column-count: 1;
+  -webkit-column-gap: 1.25rem;
+          column-gap: 1.25rem;
+  orphans: 1;
+  widows: 1;
+}
+
+/* Responsive adjustments */
+@media (min-width: 600px) {
+  .card-columns-custom {
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
+}
+
+@media (min-width: 1000px) {
+  .card-columns-custom {
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+@media (max-width: 1000px) {
+  .dissapear-narrow {
+    display: none !important;
+  }
+}
+
 /* Remove bullet points and margin/padding from the list */
 #post-list {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .card-spacer {
-  margin-bottom: 20px;
+  margin-bottom: 1.7rem;
+  overflow: hidden;
 }
-
